@@ -1,3 +1,4 @@
+* Make Modified Preorder Tree Traversal respects the default order of the model
 * Add replace_attributes for xpath tag
 * Add email paramter on report action
 * Allow to inherit views from an other model
